# alfred-repos

./: .gitattributes  .gitignore  .mise.toml  LICENCE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  auto-release.yml
.github/workflows/: release.yml
src/: info.plist  repos.py  update.py
