[project]
name = "alfred-repos"
version = "4.3.0"
description = "Browse, search and open local Git repositories with Alfred"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sherif Abdel-Naby", email = "sherifabdlnaby@gmail.com" },
]
dependencies = [
    "Alfred-PyWorkflow>=2.0",
    "docopt>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
